[package]
authors = ['Wei Tang <wei@that.world>']
edition = '2018'
name = 'pallet-move'
version = "2.0.0"
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

[dependencies.frame-support]
default-features = false
version = "3.0.0"
git = "https://github.com/paritytech/substrate"

[dependencies.frame-system]
default-features = false
version = "3.0.0"
git = "https://github.com/paritytech/substrate"

[dev-dependencies]
serde = { version = "1.0.101" }

[dev-dependencies.sp-core]
default-features = false
version = "3.0.0"
git = "https://github.com/paritytech/substrate"

[dev-dependencies.sp-io]
default-features = false
version = "3.0.0"
git = "https://github.com/paritytech/substrate"

[dev-dependencies.sp-runtime]
default-features = false
version = "3.0.0"
git = "https://github.com/paritytech/substrate"


[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std'
]
